fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ a {
     width: 65VW;
     height: 5VH;
     display: inline;
-    margin-left: 1VW;
+    margin-left: 3VW;
     margin-right: 0;
 }
 
